--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "core-js": "^2.6.5",
     "firebase": "^6.3.0",
     "vue": "^2.6.10",
-    "vuetify": "^1.5.5",
+    "vuetify": "^2.0.3",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
@@ -21,11 +21,11 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
-    "vue-cli-plugin-vuetify": "^0.5.0",
+    "sass": "^1.17.4",
+    "sass-loader": "^7.1.0",
+    "vue-cli-plugin-vuetify": "^0.6.1",
     "vue-template-compiler": "^2.6.10",
-    "vuetify-loader": "^1.0.5"
+    "vuetify-loader": "^1.2.2"
   },
   "eslintConfig": {
     "root": true,
